--- a/pandas_manipulation.ipynb
+++ b/pandas_manipulation.ipynb
@@ -13,30 +13,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5249a173-3f2c-42b8-b9ce-f4e158a6d327",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             remboursement  taux_endettement  cout_total  benefices\n",
-      "identifiant                                                        \n",
-      "0                  1130.05             30.80    271212.0     131.99\n",
-      "1                  1487.85             28.02    389715.0     206.66\n",
-      "2                   552.54             29.50    132609.6      53.71\n",
-      "3                   586.03             34.80    105485.4      44.57\n",
-      "4                   423.61             28.70    101666.4      51.21\n",
-      "...                    ...               ...         ...        ...\n",
-      "223                 672.13             31.60    161311.2      83.95\n",
-      "224                1486.99             29.05    380592.0     196.75\n",
-      "225                 876.43             37.20    157757.4      77.04\n",
-      "226                2910.96             57.10    698630.4     331.85\n",
-      "227                 434.38             18.50    130314.0      62.82\n",
-      "\n",
-      "[228 rows x 4 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>identifiant</th>\n",
+       "      <th>ville</th>\n",
+       "      <th>CP</th>\n",
+       "      <th>revenu</th>\n",
+       "      <th>remboursement</th>\n",
+       "      <th>duree</th>\n",
+       "      <th>type</th>\n",
+       "      <th>taux_interet</th>\n",
+       "      <th>taux_endettement</th>\n",
+       "      <th>cout_total</th>\n",
+       "      <th>benefices</th>\n",
+       "      <th>risque</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>TOULOUSE</td>\n",
+       "      <td>31100</td>\n",
+       "      <td>3669.0</td>\n",
+       "      <td>1130.05</td>\n",
+       "      <td>240</td>\n",
+       "      <td>immobilier</td>\n",
+       "      <td>1.168</td>\n",
+       "      <td>30.80</td>\n",
+       "      <td>271212.0</td>\n",
+       "      <td>131.99</td>\n",
+       "      <td>Non</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>PARIS</td>\n",
+       "      <td>75009</td>\n",
+       "      <td>5310.0</td>\n",
+       "      <td>240.00</td>\n",
+       "      <td>64</td>\n",
+       "      <td>automobile</td>\n",
+       "      <td>3.701</td>\n",
+       "      <td>4.52</td>\n",
+       "      <td>15360.0</td>\n",
+       "      <td>23.69</td>\n",
+       "      <td>Non</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>PARIS</td>\n",
+       "      <td>75009</td>\n",
+       "      <td>5310.0</td>\n",
+       "      <td>1247.85</td>\n",
+       "      <td>300</td>\n",
+       "      <td>immobilier</td>\n",
+       "      <td>1.173</td>\n",
+       "      <td>23.50</td>\n",
+       "      <td>374355.0</td>\n",
+       "      <td>182.97</td>\n",
+       "      <td>Non</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>MARSEILLE</td>\n",
+       "      <td>13010</td>\n",
+       "      <td>1873.0</td>\n",
+       "      <td>552.54</td>\n",
+       "      <td>240</td>\n",
+       "      <td>immobilier</td>\n",
+       "      <td>0.972</td>\n",
+       "      <td>29.50</td>\n",
+       "      <td>132609.6</td>\n",
+       "      <td>53.71</td>\n",
+       "      <td>Non</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>MARSEILLE</td>\n",
+       "      <td>13010</td>\n",
+       "      <td>1684.0</td>\n",
+       "      <td>586.03</td>\n",
+       "      <td>180</td>\n",
+       "      <td>immobilier</td>\n",
+       "      <td>1.014</td>\n",
+       "      <td>34.80</td>\n",
+       "      <td>105485.4</td>\n",
+       "      <td>44.57</td>\n",
+       "      <td>Non</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   identifiant      ville     CP  revenu  remboursement  duree        type  \\\n",
+       "0            0   TOULOUSE  31100  3669.0        1130.05    240  immobilier   \n",
+       "1            1      PARIS  75009  5310.0         240.00     64  automobile   \n",
+       "2            1      PARIS  75009  5310.0        1247.85    300  immobilier   \n",
+       "3            2  MARSEILLE  13010  1873.0         552.54    240  immobilier   \n",
+       "4            3  MARSEILLE  13010  1684.0         586.03    180  immobilier   \n",
+       "\n",
+       "   taux_interet  taux_endettement  cout_total  benefices risque  \n",
+       "0         1.168             30.80    271212.0     131.99    Non  \n",
+       "1         3.701              4.52     15360.0      23.69    Non  \n",
+       "2         1.173             23.50    374355.0     182.97    Non  \n",
+       "3         0.972             29.50    132609.6      53.71    Non  \n",
+       "4         1.014             34.80    105485.4      44.57    Non  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -59,10 +173,184 @@
     "prets['risque'] = 'Non'\n",
     "prets.loc[prets['taux_endettement'] > 35, 'risque'] = 'Oui'\n",
     "\n",
+    "prets.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6c724243",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             remboursement  taux_endettement  cout_total  benefices\n",
+      "identifiant                                                        \n",
+      "0                  1130.05             30.80    271212.0     131.99\n",
+      "1                  1487.85             28.02    389715.0     206.66\n",
+      "2                   552.54             29.50    132609.6      53.71\n",
+      "3                   586.03             34.80    105485.4      44.57\n",
+      "4                   423.61             28.70    101666.4      51.21\n",
+      "...                    ...               ...         ...        ...\n",
+      "223                 672.13             31.60    161311.2      83.95\n",
+      "224                1486.99             29.05    380592.0     196.75\n",
+      "225                 876.43             37.20    157757.4      77.04\n",
+      "226                2910.96             57.10    698630.4     331.85\n",
+      "227                 434.38             18.50    130314.0      62.82\n",
+      "\n",
+      "[228 rows x 4 columns]\n",
+      "62\n"
+     ]
+    }
+   ],
+   "source": [
     "#un dataframe où il y n'y a qu'une seule ligne par client, avec le résumé de ses informations (somme remboursement, du taux d'endettement, du cout_total et des bénéfices #réalisés)\n",
     "profil_client =  prets.groupby('identifiant')[['remboursement', 'taux_endettement', 'cout_total', 'benefices']].sum()\n",
     "print(profil_client)\n",
-    "#prets.head()"
+    "\n",
+    "# Nombre total de personnes en situation bancaire risquée à partir du taux d'endettement \n",
+    "nombre_risque = profil_client.loc[profil_client['taux_endettement']> 35, :].shape[0]\n",
+    "print(nombre_risque)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cafc7b4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ville      type      \n",
+       "BORDEAUX   immobilier    1681.32\n",
+       "LYON       automobile      47.39\n",
+       "           immobilier    2967.41\n",
+       "MARSEILLE  automobile      61.36\n",
+       "           immobilier    4334.55\n",
+       "NICE       automobile      31.15\n",
+       "           immobilier    2651.60\n",
+       "PARIS      automobile      99.50\n",
+       "           immobilier    9916.85\n",
+       "TOULOUSE   automobile      61.22\n",
+       "           immobilier    2076.85\n",
+       "Name: benefices, dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# bénéfice dégagé par chacune de nos agences, par types de prêts. Vous présenterez vos résultats sous la forme d'un tableau simple (via un group_by) :\n",
+    "\n",
+    "benefice_degage = prets.groupby(['ville', 'type'])['benefices'].sum()\n",
+    "benefice_degage.reset_index()\n",
+    "benefice_degage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "75e3f449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_35805/2753628936.py:3: FutureWarning: The provided callable <function mean at 0x729197f18900> is currently using DataFrameGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
+      "  prets.pivot_table(index='ville', columns='type', values='benefices', aggfunc=np.mean)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>automobile</th>\n",
+       "      <th>immobilier</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ville</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BORDEAUX</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105.082500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LYON</th>\n",
+       "      <td>15.796667</td>\n",
+       "      <td>118.696400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MARSEILLE</th>\n",
+       "      <td>20.453333</td>\n",
+       "      <td>60.202083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NICE</th>\n",
+       "      <td>15.575000</td>\n",
+       "      <td>139.557895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PARIS</th>\n",
+       "      <td>19.900000</td>\n",
+       "      <td>137.734028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TOULOUSE</th>\n",
+       "      <td>20.406667</td>\n",
+       "      <td>86.535417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type       automobile  immobilier\n",
+       "ville                            \n",
+       "BORDEAUX          NaN  105.082500\n",
+       "LYON        15.796667  118.696400\n",
+       "MARSEILLE   20.453333   60.202083\n",
+       "NICE        15.575000  139.557895\n",
+       "PARIS       19.900000  137.734028\n",
+       "TOULOUSE    20.406667   86.535417"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Pour aller plus loin, on souhaite avoir un tableau à double entrée (via un pivot_table) présentant cette fois ci les bénéfices moyen réalisés par chaque agence, pour #chaque type de prêt :\n",
+    "\n",
+    "prets.pivot_table(index='ville', columns='type', values='benefices', aggfunc=np.mean)"
    ]
   }
  ],
